using UnityEngine;

public class Consts
{
    public struct PlayerAnimations
    {
        public const string IS_IDLE = "isIdle";
        public const string IS_WALKING = "isWalking";
        public const string IS_RUNNING = "isRunning";
        public const string IS_JUMPING = "isJumping";
        //public const string IsAttacking = "isAttacking";
    }
}
